ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cengizhaner-website
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cengizhaner.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: crazy-harbor-ui-service
                port:
                  number: 3000



#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: dashboard-ingress
#  namespace: kubernetes-dashboard
#spec:
#  rules:
#    - http:
#        paths:
#          - backend:
#              serviceName: kubernetes-dashboard
#              servicePort: 80
